# instrument-audio-classifier

./: .gitignore  cnn_model.h5  labels.joblib  params.py  pyproject.toml
instruments_classifier/: test.py  train.py  train2.py  train3.py  utils.py
